RichwoodNew/src/objects/Capital_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Capital Projects</relationshipLabel>
        <relationshipName>Capital_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Project_End__c</fullName>
        <label>Expected Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Start__c</fullName>
        <label>Expected Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expected_Spend__c</fullName>
        <label>Total Expected Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Capital Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Expected_Spend__c</columns>
        <columns>Expected_Project_Start__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Capital Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>